fix hover scrollbar colors

--- a/mcww_web/css/layout.css
+++ b/mcww_web/css/layout.css
@@ -121,20 +121,22 @@ body.dark {
     --scrollbar-thumb-color: rgba(244, 244, 245, 0.5);
     --scrollbar-thumb-color-hover: rgba(143, 191, 255, 0.5);
 }
-:root *::-webkit-scrollbar {
-    width: 3.5px;
-    background-color: transparent;
-    transition: background-color 0.3s ease;
-}
-:root *::-webkit-scrollbar:hover {
-    background-color: var(--scrollbar-hover);
-}
-:root *::-webkit-scrollbar-thumb {
-    background-color: var(--scrollbar-thumb-color);
-    border-radius: 3px;
-    transition: background-color 0.3s ease;
-}
-:root *::-webkit-scrollbar-thumb:hover {
-    background-color: var(--scrollbar-thumb-color-hover);
+:root, * {
+    &::-webkit-scrollbar {
+        width: 3.5px;
+        background-color: transparent;
+        transition: background-color 0.3s ease;
+    }
+    &::-webkit-scrollbar:hover {
+        background-color: var(--scrollbar-hover);
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--scrollbar-thumb-color);
+        border-radius: 3px;
+        transition: background-color 0.3s ease;
+    }
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: var(--scrollbar-thumb-color-hover);
+    }
 }
 
